fix: attempt to fix github pages issues

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>the kid</p>
         <p>the goat</p>
         <p>the buster</p>
+        <p>zain (2nd place)</p>
     </div>
 </body>
 
