--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Melee Majors</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="../assets/favicon.png">
+    <link rel="icon" href="/assets/favicon.png">
     <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
