feat: finish rough card layout

--- a/site/index.html
+++ b/site/index.html
@@ -13,13 +13,22 @@
 <body>
     <div class="tournament-card">
         <div class="tournament-image"></div>
-        <h4>June 15-16</h4>
         <h2>Tipped Off 15</h2>
+        <h4>June 15-16</h4>
+        <p><a href="https://www.google.com/maps" target="_blank">city name</a> | <b>attendees:</b> number</p>
         <u>featured players</u>
-        <p>the kid</p>
-        <p>the goat</p>
-        <p>the buster</p>
-        <p>zain (2nd place)</p>
+        <div class="container">
+            <ul class="two-column-list">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+                <li>Item 7</li>
+                <li>Item 8</li>
+            </ul>
+        </div>
     </div>
     <footer>
         <div class="footer">
