feat: add mobile snapping

--- a/site/index.html
+++ b/site/index.html
@@ -14,174 +14,174 @@
     <h1>Melee Majors</h1>
     <h2 class="top">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
-    <div class="card">
-        <img src="assets/smash camp new lands.png" class="image">
-        <div class="card-content">
-            <h2>Smash Camp: New Lands</h2>
-            <h4>May 31st - June 2nd</h4>
-            <div class="featured-players">
-                <u>Featured Players</u>
-                <ul class="featured-players-columns">
-                    <li>Magi</li>
-                    <li>Fiction</li>
-                    <li>Spark</li>
-                    <li>Logan</li>
-                    <li>Bbatts</li>
-                    <li>Aura</li>
-                    <li>Graves</li>
-                    <li>Kacey</li>
-                </ul>
+    <div class="card-container">
+        <div class="card">
+            <img src="assets/smash camp new lands.png" class="image">
+            <div class="card-content">
+                <h2>Smash Camp: New Lands</h2>
+                <h4>May 31st - June 2nd</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>Magi</li>
+                        <li>Fiction</li>
+                        <li>Spark</li>
+                        <li>Logan</li>
+                        <li>Bbatts</li>
+                        <li>Aura</li>
+                        <li>Graves</li>
+                        <li>Kacey</li>
+                    </ul>
+                </div>
+                <hr>
+                <p><a href="https://maps.app.goo.gl/naFGgKkRKom8eME57" target="_blank">Gresham, OR</a> | <b>attendees:</b> 400+</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/smash-camp-new-lands-2024/details" target="_blank"
+                        class="card-button">start.gg</a>
+                        <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
+                        class="card-button">schedule</a> -->
+                    <a href="https://www.twitch.tv/Level1_TV" target="_blank" class="card-button">stream</a>
+                </div>
             </div>
-            <hr>
-            <p><a href="https://maps.app.goo.gl/naFGgKkRKom8eME57" target="_blank">Gresham, OR</a> | <b>attendees:</b> 400+</p>
-            <hr>
-            <div class="buttons">
-                <a href="https://www.start.gg/tournament/smash-camp-new-lands-2024/details" target="_blank"
-                    class="card-button">start.gg</a>
+        </div>
+        <div class="card">
+            <img src="assets/tipped off 15.png" class="image">
+            <div class="card-content">
+                <h2>Tipped Off 15</h2>
+                <h4>June 15 - June 16</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>Mang0</li>
+                        <li>Zain</li>
+                        <li>moky</li>
+                        <li>Cody Schwab</li>
+                        <li>Jmook</li>
+                        <li>KoDoRiN</li>
+                        <li>Aklo</li>
+                        <li>Joshman</li>
+                    </ul>
+                </div>
+                <hr>
+                <p><a href="https://maps.app.goo.gl/4xa7DWr8bYn9XH4H8" target="_blank">Marietta, GA</a> | <b>attendees:</b> 250+</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
+                        class="card-button">start.gg</a>
+                    <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
+                        class="card-button">schedule</a>
+                    <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/ceo.png" class="image">
+            <div class="card-content">
+                <h2>CEO 2024</h2>
+                <h4>Jun 28-30</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                    </ul>
+                </div>
+                <hr>
+                <p>
+                    <a href="https://maps.app.goo.gl/K19xfyePawTfPrwi8" target="_blank">Daytona Beach, FL</a>
+                    |
+                    <b>attendees:</b> TBD</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/ceo-2024-6" target="_blank"
+                        class="card-button">start.gg</a>
+                    <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank"
+                        class="card-button">schedule</a>
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/supernova.jpg" class="image">
+            <div class="card-content">
+                <h2>Supernova 2024</h2>
+                <h4>Aug 8-11</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                        <li>TBD</li>
+                    </ul>
+                </div>
+                <hr>
+                <p>
+                    <a href="https://maps.app.goo.gl/rs4L8qvj1JSGWEid6" target="_blank">Chantilly, VA</a>
+                    |
+                    <b>attendees:</b> TBD</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/supernova-2024" target="_blank"
+                        class="card-button">start.gg</a>
                     <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                    class="card-button">schedule</a> -->
-                <a href="https://www.twitch.tv/Level1_TV" target="_blank" class="card-button">stream</a>
+                        class="card-button">schedule</a> -->
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
+                </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="assets/tipped off 15.png" class="image">
-        <div class="card-content">
-            <h2>Tipped Off 15</h2>
-            <h4>June 15 - June 16</h4>
-            <div class="featured-players">
-                <u>Featured Players</u>
-                <ul class="featured-players-columns">
-                    <li>Mang0</li>
-                    <li>Zain</li>
-                    <li>moky</li>
-                    <li>Cody Schwab</li>
-                    <li>Jmook</li>
-                    <li>KoDoRiN</li>
-                    <li>Aklo</li>
-                    <li>Joshman</li>
-                </ul>
-            </div>
-            <hr>
-            <p><a href="https://maps.app.goo.gl/4xa7DWr8bYn9XH4H8" target="_blank">Marietta, GA</a> | <b>attendees:</b> 250+</p>
-            <hr>
-            <div class="buttons">
-                <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                    class="card-button">start.gg</a>
-                <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                    class="card-button">schedule</a>
-                <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <img src="assets/ceo.png" class="image">
-        <div class="card-content">
-            <h2>CEO 2024</h2>
-            <h4>Jun 28-30</h4>
-            <div class="featured-players">
-                <u>Featured Players</u>
-                <ul class="featured-players-columns">
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                </ul>
-            </div>
-            <hr>
-            <p>
-                <a href="https://maps.app.goo.gl/K19xfyePawTfPrwi8" target="_blank">Daytona Beach, FL</a>
-                |
-                <b>attendees:</b> TBD</p>
-            <hr>
-            <div class="buttons">
-                <a href="https://www.start.gg/tournament/ceo-2024-6" target="_blank"
-                    class="card-button">start.gg</a>
-                <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank"
-                    class="card-button">schedule</a>
-                <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <img src="assets/supernova.jpg" class="image">
-        <div class="card-content">
-            <h2>Supernova 2024</h2>
-            <h4>Aug 8-11</h4>
-            <div class="featured-players">
-                <u>Featured Players</u>
-                <ul class="featured-players-columns">
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                    <li>TBD</li>
-                </ul>
-            </div>
-            <hr>
-            <p>
-                <a href="https://maps.app.goo.gl/rs4L8qvj1JSGWEid6" target="_blank">Chantilly, VA</a>
-                |
-                <b>attendees:</b> TBD</p>
-            <hr>
-            <div class="buttons">
-                <a href="https://www.start.gg/tournament/supernova-2024" target="_blank"
-                    class="card-button">start.gg</a>
-                <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                    class="card-button">schedule</a> -->
-                <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <img src="assets/dont park on the grass.png" class="image">
-        <div class="card-content">
-            <h2>Don't Park on the Grass</h2>
-            <h4>Nov 16-17</h4>
-            <div class="featured-players">
-                <u>Featured Players</u>
-                <ul class="featured-players-columns">
-                    <li>Cody</li>
-                    <li>Plup</li>
-                    <li>Wizzrobe</li>
-                    <li>Fiction</li>
-                    <li>Spark</li>
-                    <li>Medz</li>
-                    <li>CPU8</li>
-                    <li>Salt</li>
-                </ul>
-            </div>
-            <hr>
-            <p>
-                <a href="https://maps.app.goo.gl/i9iTShDJm5JkFpGH9" target="_blank">Seattle, WA</a>
-                |
-                <b>attendees:</b> 500+</p>
-            <hr>
-            <div class="buttons">
-                <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024" target="_blank"
-                    class="card-button">start.gg</a>
-                <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                    class="card-button">schedule</a> -->
-                <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
+        <div class="card">
+            <img src="assets/dont park on the grass.png" class="image">
+            <div class="card-content">
+                <h2>Don't Park on the Grass</h2>
+                <h4>Nov 16-17</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>Cody</li>
+                        <li>Plup</li>
+                        <li>Wizzrobe</li>
+                        <li>Fiction</li>
+                        <li>Spark</li>
+                        <li>Medz</li>
+                        <li>CPU8</li>
+                        <li>Salt</li>
+                    </ul>
+                </div>
+                <hr>
+                <p>
+                    <a href="https://maps.app.goo.gl/i9iTShDJm5JkFpGH9" target="_blank">Seattle, WA</a>
+                    |
+                    <b>attendees:</b> 500+</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024" target="_blank"
+                        class="card-button">start.gg</a>
+                    <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
+                        class="card-button">schedule</a> -->
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button">stream</a> -->
+                </div>
             </div>
         </div>
     </div>
     <footer>
         <div class="footer">
-            <p></p>
-            <hr>
+            <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg">github repo</a></p>
             <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank">website</a> is
-                open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html"
-                    target="_blank">agpl-3</a><br>powered by <a href="https://pages.github.com" target="_blank">github
-                    pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank">jtof</a> and <a
-                    href="https://github.com/nathanbabcock" target="_blank">nathan</a></p>
+            open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">agpl-3</a></p>
+            <p>powered by <a href="https://pages.github.com" target="_blank">github
+            pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank">excalo</a></p>
         </div>
     </footer>
 </body>
