feat: optimize website loading and start work on a mobile background
Co-authored-by: Nathan <nathanbabcock@users.noreply.github.com>

--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
     <div class="background-gradient"></div>
     <div class="card-container">
         <div class="card">
-            <img src="assets/tipped off 15.png" class="image">
+            <img src="assets/cards/tipped-off-15.webp" class="image">
             <div class="card-content">
                 <h2>Tipped Off 15</h2>
                 <h4>Jun 15-16</h4>
@@ -44,7 +44,7 @@
                     <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
                         class="card-button" data-umami-event="start-gg-clicked"
                         data-umami-event-name="Tipped Off">Start.gg</a>
-                    <a href="assets/schedules/tipped off 15 schedule.png" target="_blank"
+                    <a href="assets/cards/schedules/tipped off 15 schedule.png" target="_blank"
                         class="card-button" data-umami-event="schedule-clicked"
                         data-umami-event-name="Tipped Off">Schedule</a>
                     <a href="https://twitch.tv/Mang0" target="_blank" class="card-button"
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="assets/ceo.png" class="image">
+            <img src="assets/cards/ceo.webp" class="image">
             <div class="card-content">
                 <h2>CEO 2024</h2>
                 <h4>Jun 28-30</h4>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="assets/warehouse war iv.jpg" class="image">
+            <img src="assets/cards/warehouse-war-iv.webp" class="image">
             <div class="card-content">
                 <h2>Warehouse War IV</h2>
                 <h4>Jul 26-27</h4>
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="assets/supernova.jpg" class="image">
+            <img src="assets/cards/supernova.webp" class="image">
             <div class="card-content">
                 <h2>Supernova 2024</h2>
                 <h4>Aug 8-11</h4>
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="assets/dont park on the grass.png" class="image">
+            <img src="assets/cards/dont-park-on-the-grass.webp" class="image">
             <div class="card-content">
                 <h2>Don't Park on the Grass</h2>
                 <h4>Nov 16-17</h4>
@@ -201,7 +201,7 @@
             <button onclick="switchcolors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
             <hr>
             <p>see something wrong? open an issue or pull request on our <a
-                    href="https://github.com/jtof-dev/meleemajors.gg" data-umami-event="github-link-clicked">github
+                    href="https://github.com/jtof-dev/meleemajors.gg" data-umami-event="github-link-clicked" target="_blank">github
                     repo</a></p>
             <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
                     data-umami-event="second-github-link-clicked">website</a> is
