feat: add mobile background

--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
                     <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
                         class="card-button" data-umami-event="start-gg-clicked"
                         data-umami-event-name="Tipped Off">Start.gg</a>
-                    <a href="assets/cards/schedules/tipped off 15 schedule.png" target="_blank"
+                    <a href="assets/schedules/tipped-off-15-schedule.webp" target="_blank"
                         class="card-button" data-umami-event="schedule-clicked"
                         data-umami-event-name="Tipped Off">Schedule</a>
                     <a href="https://twitch.tv/Mang0" target="_blank" class="card-button"
