fix: tweak mobile background not rendering properly on webkit
Co-authored-by: Nathan <nathanbabcock@users.noreply.github.com>

--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="dark-mode">
+    <div class="fixed-position"></div>
     <h1 class="title">Melee Majors</h1>
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
