fix: update indentation on static.yml

--- a/site/index.html
+++ b/site/index.html
@@ -219,4 +219,4 @@
 
 </html>
 
-<!-- comment to see if the github actions filter is working properly -->
+<!-- comment to see if the github actions filter is working properly, again this time -->
