feat: add ko-fi button to footer

--- a/ssg/src/html/footer.html
+++ b/ssg/src/html/footer.html
@@ -3,6 +3,7 @@
     <div class="footer">
         <!-- <button>calendar</button> -->
         <button onclick="switchcolors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
+        <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on ko-fi</button></a>
         <hr>
         <p>see something wrong? open an issue or pull request on our <a
                 href="https://github.com/jtof-dev/meleemajors.gg" data-umami-event="github-link-clicked" target="_blank">github
