feat: (theoretically) finish the ssg
Co-authored-by: Nathan <nathanbabcock@users.noreply.github.com>

--- a/ssg/src/index.html
+++ b/ssg/src/index.html
@@ -19,7 +19,7 @@
     <div class="background-gradient"></div>
     <div class="card-container">
 <div class="card">
-    <img src="tippedOff15Connected1.webp" class="image">
+    <img src="assets/cards/tippedOff15Connected1.webp" class="image">
     <div class="card-content">
         <h2>Tipped Off 15: Connected</h2>
         <h4>June 15 - June 17</h4>
@@ -70,7 +70,7 @@
     </div>
 </div>
 <div class="card">
-    <img src="ceo20246.webp" class="image">
+    <img src="assets/cards/ceo20246.webp" class="image">
     <div class="card-content">
         <h2>CEO 2024</h2>
         <h4>June 28 - July 01</h4>
