feat: add calendar button

--- a/site/index.html
+++ b/site/index.html
@@ -276,8 +276,8 @@
 </div>
 <footer>
     <div class="footer">
-        <!-- <button>calendar</button> -->
-        <button onclick="switchcolors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
+        <button onclick="calendarButton(event)" class="calendar-button" data-umami-event="calendar-button-clicked">calendar</button>
+        <button onclick="switchColors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
         <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on ko-fi</button></a>
         <hr>
         <p>see something wrong? open an issue or pull request on our <a
