fix: make cards generate correctly, and dynamically assign timezones to tournaments

--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,7 @@
         data-umami-event-name="CEO 2024">Start.gg</a>
       <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank" class="card-button"
         data-umami-event="schedule-clicked" data-umami-event-name="CEO 2024">Schedule</a>
-      <a href="" target="_blank" class="card-button hidden"
+      <a href="https://www.twitch.tv/vgbootcamp" target="_blank" class="card-button"
         data-umami-event="stream-clicked" data-umami-event-name="CEO 2024">Stream</a>
     </div>
   </div>
@@ -78,7 +78,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Nashville, TN">
         Nashville, TN
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 185
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 187
     </p>
     <hr>
     <div class="buttons">
@@ -131,7 +131,7 @@
   <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
   <div class="card-content">
     <h2>Eggdog Invitational</h2>
-    <h4>August 29 - September 02</h4>
+    <h4>August 29 - September 01</h4>
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
@@ -167,7 +167,7 @@
   <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
   <div class="card-content">
     <h2>Don't Park on the Grass 2024</h2>
-    <h4>November 16 - November 18</h4>
+    <h4>November 16 - November 17</h4>
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
@@ -233,4 +233,3 @@
 </body>
 
 </html>
-<!-- rebuild site -->
